k8s/qa/cofepris-microfront/cofepris-microfront-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modulefederation-cofepris-microfront-deployment-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modulefederation-cofepris-microfront-qa
  template:
    metadata:
      labels:
        app: modulefederation-cofepris-microfront-qa
    spec:
      containers:
      - name: front-vucem30-container-qa
        image: ghcr.io/vucem30/dockerized-modulefederation-cofepris-microfront:1.0.30
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: vucem30registrykey
