k8s/qa/cofepris-microfront/cofepris-microfront-service-dev.yaml
# Expose the deployment using a Service
apiVersion: v1
kind: Service
metadata:
  name: modulefederation-cofepris-microfront-service-qa
spec:
  selector:
    app: modulefederation-cofepris-microfront-qa
  ports:
    - protocol: TCP
      port: 4211
      targetPort: 80
  type: NodePort
